# cocoon-tpm

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
bssl-bare-sys/: Cargo.toml  README.md  build.rs
bssl-bare-sys-target-integration/: Cargo.toml  build.rs
bssl-bare-sys/src/: lib.rs
crypto/: Cargo.toml  README.md
crypto/src/: error.rs  hash.rs  io_slices.rs  lib.rs  symcipher.rs
crypto/src/bssl_ffi/: bssl_bn.rs  error.rs  hash.rs  mod.rs  symcipher.rs
crypto/src/bssl_ffi/ecc/: bssl_ec_key.rs  curve.rs  ecdh.rs  ecdsa.rs  mod.rs
crypto/src/bssl_ffi/rng/: mod.rs
crypto/src/ecc/: ecdh.rs  ecdsa.rs  ecschnorr.rs  gen_random_scalar.rs  key.rs  mod.rs
crypto/src/ecc/curve/: mod.rs  weierstrass_arithmetic.rs
crypto/src/kdf/: mgf1.rs  mod.rs  tcg_tpm2_kdf_a.rs  tcg_tpm2_kdf_e.rs
crypto/src/pure_rust/: hash.rs  mod.rs
crypto/src/pure_rust/ecc/: ecdh.rs  ecdsa.rs  mod.rs
crypto/src/pure_rust/ecc/curve/: mod.rs  weierstrass_arithmetic.rs
crypto/src/pure_rust/rng/: mod.rs  x86_64_rdseed.rs
crypto/src/pure_rust/symcipher/: ctr_impl.rs  mod.rs
crypto/src/rng/: chained.rs  hash_drbg.rs  mod.rs  x86_64_rdseed.rs
crypto/src/rsa/: crt.rs  encrypt.rs  es_pkcs1_v1_5.rs  key.rs  keygen.rs  mod.rs  oaep.rs  pss.rs  ssa_pkcs1_v1_5.rs
crypto/src/symcipher/: ctr_impl.rs  mod.rs
tpm2-interface/: Cargo.toml  README.md  gen-interface.sh
tpm2-interface/src/: interface.rs  lib.rs
utils-common/: Cargo.toml  README.md
utils-common/src/: alloc.rs  bitmanip.rs  ct_cmp.rs  index_permutation.rs  io_slices.rs  lib.rs  murmurhash3.rs  xor.rs  zeroize.rs
