[workspace]
resolver = "2"
members = [ "crypto", "bssl-bare-sys", "tpm2-interface", "utils-common", "bssl-bare-sys-target-integration"]

[workspace.dependencies]
bssl-bare-sys = { path = "bssl-bare-sys" }
bssl-bare-sys-target-integration = { path = "bssl-bare-sys-target-integration" }
cocoon-tpm-crypto = { path = "crypto", default-features = false }
cocoon-tpm-tpm2-interface = { path = "tpm2-interface", default-features = false }
cocoon-tpm-utils-common = { path = "utils-common", default-features = false }
