[package]
name = "bssl-bare-sys"
version = "0.1.0"
# Needs to have < 2024 for now, because boringssl's wrapper.h fed into
# bindgen has function arguments named 'gen', which is a reserved
# keyword.
edition = "2021"

# Make usage if this crate exclusive with the official bssl-sys.
# Otherwise linking conflicts will occur.
links = "bssl"

[lib]

[features]
target-integration = ["dep:bssl-bare-sys-target-integration"]

[dependencies]
bssl-bare-sys-target-integration = { git = "https://github.com/nicstange/cocoon-tpm.git", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
