[package]
name = "cocoon-tpm-utils-common"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = ["zeroize"]

zeroize = ["dep:zeroize", "cmpa/zeroize"]

[dependencies]
cmpa = { git = "https://github.com/nicstange/cmpa-rs.git", branch = "master", default-features = false }
zeroize = { version = "1.8.1", optional = true, default-features = false }
